*** WooCommerce Subscriptions Core Changelog ***

= 7.2.0 - 2024-xx-xx =
* Fix - Regenerate subscriptions related order caches (renewal, resubscribe, switch) if it's stored as an invalid value to prevent fatal errors.
* Update - Show "FREE" instead of 0 when there is no shipping cost in the recurring totals section of the Cart and Checkout blocks (requires WooCommerce 9.0+).
* Dev - New function wcs_set_recurring_item_total() to set line item totals that have been copied from an initial order to their proper recurring totals (i.e. remove sign-up fees).

= 7.1.1 - 2024-05-09 =
* Fix - Resolved an issue that caused "WC_DateTime could not be converted to int" warnings to occur on non-hpos sites while editing a subscription.

= 7.1.0 - 2024-05-09 =
* Fix - Add check to prevent fatal error in rsort and array_sum.
* Fix - Use `add_to_cart_ajax_redirect` instead of the deprecated `redirect_ajax_add_to_cart` function as callback.
* Fix - Filtered order links in subscription reports returns all the orders when HPOS is enabled.
* Fix - Typo in confirmation alert when users remove an item from a subscription.
* Fix - Ensure the scheduled sale price for subscription products ends at the end of the "to" day set in product settings.
* Fix - Subscription table is empty in mobile view when HPOS is enabled.
* Fix - WooCommerce page header is hidden when HPOS is enabled.
* Fix - Subscription updated messages missing on the Edit Subscription page when HPOS is enabled.
* Fix - Resolved an issue that prevented bulk actions from running on the Subscriptions list table when the table was filtered by date, payment method, product or customer.
* Update - Update the shipping method styling to apply borders to the highlighted shipping option in the Checkout block.
* Update - Include a full stack trace in failed scheduled action logs to improve troubleshooting issues.
* Update - Show notice about product being removed from the cart when a subscription is for disabled mixed checkout setting.